Add some standard JVM options to launch4j